# Checklist-Assistant

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  NOTICE  PROBLEMS.md  README.md  SECURITY.md  TODO.md  TRADEMARK.md
CHAX-CLIENT/mcp-voice-assistant/: README.md
CHAX-CLIENT/mcp-voice-assistant/prompts/: onboarding.md  tool_calls.md  utterances.md
CHAX-CLIENT/web/: README.md  about.html  checklist_assistant.html  checklist_prototype_common.js  flow_graph_engine.js  import_export.js  index.html  oauth_callback.html  portal_help.html  portal_settings.html  save_controller.js  tests.html  theme.css
checklists/: README.md
checklists/chax/chax-demo/: checklist.md
checklists/chax/chax-demo/templates/tex/: report.tex
checklists/chax/client_template/templates/tex/: client_template.jsonl  report.tex
checklists/chax/initial_setup/: checklist.md
checklists/chax/minimal/templates/tex/: report.tex
checklists/examples/checklist_authoring/: checklist.md
checklists/examples/checklist_authoring/data/: prompt-message-pair.jsonl
checklists/examples/predicate_demo/: checklist.md
checklists/examples/prefill_demo/: checklist.md
checklists/examples/prefill_demo/data/: prefill_demo.csv
checklists/unit-tests/Unit Tests/: checklist.md
docs/: flow_visual_engine_handoff.md  maintainer_handoff.md  mcp_tools.md  relationship_schema_view.md  relationship_workbench_contract.md  user_manual.md
docs/decision_records/: 2026-07-12_design-principles.md
scripts/: check_text_encoding.ps1  checklist_workspace.ps1  demo_report_api.ps1  e2e_smoke_test.ps1  fill_checklist_instance.ps1  generate_feature_matrix_table.ps1  generate_feature_matrix_table.py  package_release.ps1  run_tests.ps1
spec/: LICENSE  README.md  checklist-assistant-spec.md  compatibility-policy.md  principles.md
spec/conformance/: README.md
src/core/: app.cpp  app.hpp  asset_pack.cpp  asset_pack.hpp  checklist_markdown.cpp  checklist_markdown.hpp  checklist_store.cpp  checklist_store.hpp  graph_projection.cpp  graph_projection.hpp  logging.cpp  main.cpp  mcp_bridge.cpp  mcp_bridge.hpp  oauth.cpp  oauth.hpp  report_generator.cpp  report_generator.hpp
src/platform/: http_client.cpp  http_client.hpp  http_server.cpp  http_server.hpp  system.cpp  system.hpp
src/platform/windows/: checklist_assistant.rc
src/tools/: chax_mcp_bridge.cpp  checklist_assistant.cpp  unit_test_controller.cpp
tests/: graph_projection_test.cpp  http_api_test.cpp  integration_schema_test.cpp  markdown_compat_test.cpp  markdown_relationships_test.cpp  mcp_bridge_test.cpp  mcp_voice_helper_test.cpp  oauth_authorize_ui_test.cpp  oauth_flow_test.cpp  oauth_store_repro_test.cpp  predicate_daemon_exhaustive_csv_test.cpp  predicate_daemon_exhaustive_test.cpp  report_api_flow_test.cpp  report_generation_test.cpp  save_controller_test.js
tests/fixtures/csvFillChecklist/data/: csvFillChecklist.csv
tests/fixtures/formFillDemo/templates/: report.fdf
tools/automation/: smoke_server_start_stop.ps1
